fix issues occuring on mobile screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+/* 👇 Default (Light mode) */
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
 
+/* 👇 Dark Mode Overrides */
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0B1215;
@@ -16,6 +18,6 @@
 
 body {
   color: var(--foreground);
-  /* background: var(--background); */
+  background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
